# reelsgen-stepservice-template-simple

./: .env.example  .gitignore  GUIDE.md  README-AI.md  README.md  main.py  pyproject.toml  run_benchmark.py  run_tests.py  vercel.json
.cursor/rules/: how-to-llm-tracing.mdc  schemas.py  scope-simple.mdc  todo.mdc
app/: __init__.py  auth.py  config.py  logging_config.py
app/api/: __init__.py  example.py  health.py  operations.py
app/schemas/: __init__.py  health.py  operations.py
app/services/: __init__.py  alert_service.py  operation_service.py  webhook_service.py
benchmark/: README.md  benchmark.py  test_cases.py
benchmark/results/: benchmark_20251027_172045.json  benchmark_20251027_172056.json  benchmark_20251027_172241.json  benchmark_20251027_172338.json  benchmark_20251027_172400.json
tests/: conftest.py  test_api.py
tests/unit/: test_services.py
